# ckb-auth

./: Makefile
c/: auth.c
ckb-auth-rs/: Cargo.toml
tests/auth-rust-lock/contracts/auth-rust-demo/: Cargo.toml
tests/auth-rust-lock/contracts/auth-rust-demo/src/: entry.rs
